# ChangeLog for media-libs/mesa
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/mesa/ChangeLog,v 1.10 2005/08/10 05:20:38 spyderous Exp $

  10 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; -mesa-3.5.ebuild:
  Drop old version.

*mesa-6.3.1.1 (10 Aug 2005)

  10 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +files/fix-xthreads-location.patch, +files/lib/libGL.la,
  +files/lib/libGLU.la, +files/lib/libOSMesa.la, +files/use-xthreads.patch,
  +mesa-6.3.1.1.ebuild:
  Add for modular X.

  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> mesa-3.5.ebuild:
  Fix use invocation

  24 Nov 2003; Aron Griffis <agriffis@gentoo.org> mesa-3.5.ebuild:
  Add ~alpha

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*mesa-3.5 (22 Jul 2002)

  22 Jul 2002; Seemant Kulleen <seemant@gentoo.org> mesa-3.5.ebuild
  files/digest-mesa-3.5 :

  This was updated a while ago. I repoman'd it, and cleaned up spacing and
  syntax a little.

*mesa-3.4.2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.